Enforce non-null checks and immutability for attributes in `AppOAuth2Principal` constructor